[project]
name = "ragbio"
version = "0.1.6"
description = "RAG pipeline for gene-disease literature summarization"
authors = [{ name = "Manish Kumar" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "faiss-cpu",
    "sentence-transformers",
    "pymed",
    "requests",
    "pandas",
    "ollama",
    "langchain",
    "biopython",
    "beautifulsoup4",
    "sqlite-utils"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ragbio*"]
exclude = ["data*", "notebooks*", "obsolete*"]

[tool.setuptools.package-data]
"ragbio" = ["images/*.png"]

